--- a/A1/A1_SettingUp.ipynb
+++ b/A1/A1_SettingUp.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -361,12 +361,12 @@
    },
    "outputs": [],
    "source": [
-    "dictionary = zip(var_a, var_b)\n"
+    "dictionary = dict(zip(var_a, var_b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -579,13 +579,16 @@
     "# This variable is provided to you.\n",
     "other_dictionary = dict()\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for k,v in dictionary.items():\n",
+    "    if(v % 2 == 1):\n",
+    "        other_dictionary[k] = squared_diff(v, 10)\n",
+    "    else:\n",
+    "        other_dictionary[k] = v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -637,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -675,19 +678,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'sklearn' has no attribute 'show_versions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-c04144f59ac5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32massert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32massert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32massert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mskl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow_versions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'sklearn' has no attribute 'show_versions'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tests for Q6\n",
     "\n",
@@ -716,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
